# tanda

./: .env.example  .gitignore  Cargo.toml
.docker/: docker-compose.yml  server.Dockerfile
src/: main.rs
